Implemented a separate class for storing unique ID's for all users in a Dictionary data structure, using the integer section as the Key and the role letter section as the Value.

--- a/SimpleBankSystem/SimpleBankSystem/SimpleBankSystem.csproj
+++ b/SimpleBankSystem/SimpleBankSystem/SimpleBankSystem.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Model\Administrator.cs" />
     <Compile Include="Model\BankUser.cs" />
     <Compile Include="Model\Developer.cs" />
+    <Compile Include="Model\IdentificationStorage.cs" />
     <Compile Include="Model\Person.cs" />
     <Compile Include="View\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
