I have made a major update by connecting a localhost database using MySQL and connected it to this project.
I have created a registering and login system which is fairly barebones at the moment. The main function of registering the account details to the local database and login using the database are functional although there are alot of exceptions that can arise.

--- a/SimpleBankSystem/SimpleBankSystem/SimpleBankSystem.csproj
+++ b/SimpleBankSystem/SimpleBankSystem/SimpleBankSystem.csproj
@@ -35,8 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.10.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,8 +67,8 @@
     <Compile Include="Model\BankAccount.cs" />
     <Compile Include="Model\BankUser.cs" />
     <Compile Include="Model\Developer.cs" />
-    <Compile Include="Model\IBankAccount.cs" />
     <Compile Include="Model\IdentificationStorage.cs" />
+    <Compile Include="Model\Interfaces\IBankAccount.cs" />
     <Compile Include="Model\Person.cs" />
     <Compile Include="View\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
@@ -107,7 +115,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModel\" />
